<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_name"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:endIconMode="clear_text"
        app:helperText="@string/email_helper_text"
        app:helperTextTextColor="@color/helper_color"
        app:startIconDrawable="@drawable/icon_email"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:endIconMode="password_toggle"
        app:helperText="@string/password_helper_text"
        app:helperTextTextColor="@color/helper_color"
        app:startIconDrawable="@drawable/icon_password"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:maxLines="1"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:helperText="@string/phone_number_helper_text"
        app:helperTextTextColor="@color/helper_color"
        app:startIconDrawable="@drawable/icon_call"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_hint"
            android:maxLines="1"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/acc_type_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/acc_type_message"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPhoneNumber"
    />

    <RadioGroup
        android:id="@+id/check_acc_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:checkedButton="@id/radio_premium"
        app:layout_constraintTop_toBottomOf="@+id/acc_type_msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    >
        <RadioButton
            android:id="@+id/radio_free"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc_type_free"
        />

        <RadioButton
            android:id="@+id/radio_premium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acc_type_premium"
        />
    </RadioGroup>

    <CheckBox
        android:id="@+id/check_marketing_consent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/marketing_consent"
        app:layout_constraintTop_toBottomOf="@+id/check_acc_type"
    />

    <CheckBox
        android:id="@+id/check_newsletter_consent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/newsletter_consent"
        app:layout_constraintTop_toBottomOf="@+id/check_marketing_consent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_button_msg"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/check_newsletter_consent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>