<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileDetailsActivity">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile_screen_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_2906"
        app:layout_constraintTop_toBottomOf="@+id/text_view"
        app:layout_constraintStart_toStartOf="parent"
        />
    
    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="28dp"
        android:text="@string/profile_email"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/profile_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="28dp"
        android:text="@string/profile_phone_number"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/profile_email"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/profile_acc_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="28dp"
        android:text="@string/profile_acc_type"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/profile_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>